--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,10 @@
+body {
+    background-color: black;
+}
+h1 {
+    font-size: 100px;
+}
+h2 {
+    font-size: 90px;
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+}
